objects/School__c.object
<CustomObject>
    <label>School</label>
    <nameField>
        <label>School Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Schools</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Fees__c</fullName>
        <label>Fees</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>School Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Positions__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Position</label>
        <referenceTo>Poition__c</referenceTo>
        <relationshipLabel>Schools</relationshipLabel>
        <relationshipName>Schools</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>School_Phone__c</fullName>
        <label>School Phone</label>
        <type>Phone</type>
    </fields>
    <recordTypes>
        <fullName>State</fullName>
        <active>true</active>
        <label>State</label>
    </recordTypes>
    <recordTypes>
        <fullName>Central</fullName>
        <active>true</active>
        <label>Central</label>
    </recordTypes>
</CustomObject>